--- a/roles/ghost/templates/docker-compose.yml.jinja2
+++ b/roles/ghost/templates/docker-compose.yml.jinja2
@@ -3,6 +3,8 @@ version: '3.1'
 services:
 
   ghost:
+    container_name: ghost
+    container_name: ghost
     image: ghost:latest
     restart: always
     ports:
