--- a/roles/ghost/templates/docker-compose.yml.jinja2
+++ b/roles/ghost/templates/docker-compose.yml.jinja2
@@ -4,7 +4,7 @@ services:
 
   ghost:
     container_name: ghost
-    container_name: ghost
+    host_name: ghost
     image: ghost:latest
     restart: always
     ports:
